Set OmopDocRunner as main class in jar in pom Fix main args bug in OmopDocRunner Add package to writer in piper