@@ -2,6 +2,7 @@ package org.healthnlp.deepphe.omop;
 
 import org.apache.ctakes.core.pipeline.PiperFileRunner;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -16,8 +17,9 @@ final public class DpheOmopDocRunner {
 
    static private final String DEFAULT_PIPER = "pipeline/OmopDocRunner.piper";
 
-   public static void main( final String...args ) {
-      final List<String> parms = Arrays.asList( args );
+   public static void main( final String... args ) {
+//      final List<String> parms = Arrays.asList( args );
+      final List<String> parms = new ArrayList<>( List.of( args ) );
       // Add the default piper file if one is not specified.
       if ( !parms.contains( "-p" ) ) {
          parms.add( "-p" );
